fix ScriptsReader